Adjusted molecular code to include conlens

--- a/TEST.ipynb
+++ b/TEST.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "f1033feb",
    "metadata": {},
    "outputs": [
@@ -72,34 +72,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.994751255831873\n",
-      "quartic of X_plus 0.9973721751843055 is 0.0004816760097567929\n",
-      "quartic of X_minus -0.9973721751843055 is 0.0004774932755094996\n",
-      "Initial guess X0: -0.9972197418981161\n",
-      "Converged X: 0.9972131779115504\n",
-      "Quartic value at X: 2.220446049250313e-16\n",
+      "0.009356512558318729\n",
+      "quartic of X_plus 0.09672906780445437 is 0.00016957839184672877\n",
+      "quartic of X_minus -0.09672906780445437 is 0.00017299807586240203\n",
+      "Initial guess X0: -0.09666109942394532\n",
+      "Converged X: -0.09663068452705063\n",
+      "Quartic value at X: 2.1718737919229625e-15\n",
       "Root success flag: True\n",
-      "Function evaluations: 24 Jacobian evaluations: 1\n",
+      "Function evaluations: 18 Jacobian evaluations: 1\n",
       "\n",
       "Iterations / cost to converge:\n",
-      "SHAKE      : 9 iterations\n",
-      "ILVES-M    : 7 iterations\n",
-      "ILVES-F    : 8 iterations\n",
+      "SHAKE      : 4 iterations\n",
+      "ILVES-M    : 3 iterations\n",
+      "ILVES-F    : 3 iterations\n",
       "Quartic    : non-iterative (root solver, evals shown above)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/workspaces/python-shake/shake/core.py:98: RuntimeWarning: overflow encountered in matmul\n",
-      "  return 0.5*self.Jinv@(gammasum@self.H)@gammadiff\n",
-      "/workspaces/python-shake/shake/core.py:97: RuntimeWarning: invalid value encountered in subtract\n",
-      "  gammasum = 2*gamma-gammadiff\n",
-      "/workspaces/python-shake/shake/core.py:184: RuntimeWarning: overflow encountered in matmul\n",
-      "  new_sigma = np.array([l@l for l in new_s_cons]) - self.conlens*self.conlens\n",
-      "/workspaces/python-shake/shake/core.py:188: RuntimeWarning: invalid value encountered in matmul\n",
-      "  new_gamma = gamma.copy() + 0.5*np.linalg.inv(self.J_ilvesf)@new_sigma\n"
      ]
     }
    ],
@@ -111,7 +97,7 @@
     "rng = np.random.default_rng(seed=123456)\n",
     "\n",
     "# masses: O, H, H\n",
-    "c1 = Constraints(masses=[16, 1.0, 1.0])\n",
+    "c1 = Constraints(masses=[16, 1.0, 1.0], conlens=np.array([0.097,0.097]))\n",
     "\n",
     "# water geometry (nm)\n",
     "r = np.array([\n",
@@ -122,10 +108,11 @@
     "      0.0]                                # H2\n",
     "])\n",
     "\n",
-    "s = shift_coord(*r, rng)\n",
+    "s = shift_coord(*r, rng, std=0.01)\n",
     "\n",
     "c1.load_s(s)\n",
     "c1.load_r(r)\n",
+    "t=1e-3\n",
     "\n",
     "#SHAKE \n",
     "shake_iters = len(list(c1.itershake()))\n",
@@ -150,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "68e7d3cf",
    "metadata": {},
    "outputs": [
@@ -158,28 +145,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.994751255831873\n",
-      "quartic of X_plus 0.9973721751843055 is 0.0006577917374738229\n",
-      "quartic of X_minus -0.9973721751843055 is 0.0018405822822961104\n",
-      "Initial guess X0: -0.9969588693878415\n",
-      "Converged X: -0.9969213073142187\n",
-      "Quartic value at X: 3.3306690738754696e-14\n",
+      "0.02011151255831872\n",
+      "quartic of X_plus 0.1418150646381361 is 0.00014505699593759733\n",
+      "quartic of X_minus -0.1418150646381361 is 1.066281490654658e-05\n",
+      "Initial guess X0: -0.14179330322837636\n",
+      "Converged X: -0.14179224004234\n",
+      "Quartic value at X: 7.46833150877535e-14\n",
       "Root success flag: True\n",
-      "Function evaluations: 22 Jacobian evaluations: 1\n",
+      "Function evaluations: 15 Jacobian evaluations: 1\n",
       "\n",
       "Iterations / cost to converge:\n",
-      "SHAKE      : 9 iterations\n",
-      "ILVES-M    : 7 iterations\n",
-      "ILVES-F    : 9 iterations\n",
+      "SHAKE      : 4 iterations\n",
+      "ILVES-M    : 3 iterations\n",
+      "ILVES-F    : 3 iterations\n",
       "QDS        : 1 (root solver; evals shown above)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/workspaces/python-shake/shake/core.py:112: RuntimeWarning: invalid value encountered in matmul\n",
-      "  return (s_coords-self.W@self.L.T@np.diag(gamma)@self.L@r_coords).copy()\n"
      ]
     }
    ],
@@ -191,7 +170,7 @@
     "rng = np.random.default_rng(seed=123456)\n",
     "\n",
     "# masses: C, O, H\n",
-    "c1 = Constraints(masses=[12.0, 16.0, 1.0])\n",
+    "c1 = Constraints(masses=[12.0, 16.0, 1.0], conlens=np.array([0.142,0.097]))\n",
     "\n",
     "# methanol C–O–H geometry (nm)\n",
     "R_CO = 0.142      # nm\n",
@@ -207,10 +186,11 @@
     "     0.0]                                       # H\n",
     "], dtype=float)\n",
     "\n",
-    "s = shift_coord(*r, rng)\n",
+    "s = shift_coord(*r, rng, std=0.01)\n",
     "\n",
     "c1.load_s(s)\n",
     "c1.load_r(r)\n",
+    "t=1e-3\n",
     "\n",
     "#SHAKE \n",
     "shake_iters = len(list(c1.itershake()))\n",
@@ -233,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "1c9bd064",
    "metadata": {},
    "outputs": [
@@ -242,29 +222,29 @@
      "output_type": "stream",
      "text": [
       "SHAKE:\n",
-      "[array([-119.20981088, -167.37394071]), array([ 895.8401323 , 1549.96018739]), array([ 76219.94049039, 141255.54796534]), array([6.14697015e+08, 1.16630806e+09]), array([4.15151059e+16, 7.93633930e+16]), array([1.91679232e+32, 3.67282377e+32]), array([4.10160871e+63, 7.86483457e+63]), array([1.88025568e+126, 3.60617880e+126]), array([3.95272575e+251, 7.58151631e+251]), array([inf, inf])]\n",
+      "[array([0.37315782, 0.08362132]), array([0.38142844, 0.08957855]), array([0.3817734 , 0.08983308]), array([0.38178794, 0.08984384])]\n",
       "\n",
       "ILVES-M:\n",
-      "[array([0., 0.]), array([-119.20981088, -167.37394071]), array([-63.98517348, -87.2318938 ]), array([-42.76913653, -53.43842532]), array([-37.93349151, -44.17400214]), array([-37.59230063, -43.35303596]), array([-37.58999287, -43.34640578])]\n",
+      "[array([0., 0.]), array([0.37315782, 0.08362132]), array([0.38178372, 0.08984005]), array([0.38178858, 0.08984432])]\n",
       "\n",
       "ILVES-F:\n",
-      "[array([0., 0.]), array([-181.31902494, -182.28841193]), array([2487.44816904, 2429.26640675]), array([473586.07552552, 468874.87720521]), array([1.73896101e+10, 1.73031382e+10]), array([2.35335371e+19, 2.34750002e+19]), array([4.31806148e+37, 4.31269212e+37]), array([1.45511268e+74, 1.45420843e+74]), array([1.65315937e+147, 1.65264604e+147]), array([2.13428382e+293, 2.13395270e+293]), array([inf, inf])]\n",
+      "[array([0., 0.]), array([0.39007798, 0.09045429]), array([0.38182574, 0.08996958]), array([0.38178724, 0.08984512]), array([0.38178856, 0.0898443 ])]\n",
       "\n",
       "Quartic / QDS:\n",
-      "0.994751255831873\n",
-      "quartic of X_plus 0.9973721751843055 is 0.061540859666042946\n",
-      "quartic of X_minus -0.9973721751843055 is 2.551012630988606\n",
-      "Initial guess X0: -0.8946914448307774\n",
-      "Converged X: -0.5830208889742772\n",
-      "Quartic value at X: 1.1102230246251565e-16\n",
+      "0.0312765125583187\n",
+      "quartic of X_plus 0.020808173257496374 is -0.00036729938802060325\n",
+      "quartic of X_minus -0.13897500138890825 is -0.008045276407322936\n",
+      "Initial guess X0: 0.023237645613393455\n",
+      "Converged X: -0.1758023195676875\n",
+      "Quartic value at X: 0.0\n",
       "Root success flag: True\n",
-      "Function evaluations: 9 Jacobian evaluations: 1\n",
-      "[-7.3023091  55.96934407]\n",
+      "Function evaluations: 8 Jacobian evaluations: 1\n",
+      "[0.38178858 0.08984432]\n",
       "\n",
       "Iterations / cost to converge:\n",
-      "SHAKE      : 10 iterations\n",
-      "ILVES-M    : 6 iterations\n",
-      "ILVES-F    : 10 iterations\n",
+      "SHAKE      : 4 iterations\n",
+      "ILVES-M    : 3 iterations\n",
+      "ILVES-F    : 4 iterations\n",
       "QDS        : 1 (root solver; evals printed above)\n"
      ]
     }
@@ -277,7 +257,7 @@
     "rng = np.random.default_rng(seed=123456)\n",
     "\n",
     "# Particle order: 0=C (centre), 1=Cl, 2=Cl\n",
-    "c1 = Constraints(masses=[12.0, 35.45, 35.45])\n",
+    "c1 = Constraints(masses=[12.0, 35.45, 35.45], conlens =np.array([0.177,0.177]))\n",
     "\n",
     "R_CCl = 0.177      # nm\n",
     "THETA = 110.6      # degrees (Cl–C–Cl at C)\n",
@@ -290,10 +270,11 @@
     "    [R_CCl*np.cos(theta), R_CCl*np.sin(theta), 0.0]  # Cl2\n",
     "], dtype=float)\n",
     "\n",
-    "s = shift_coord(*r, rng)\n",
+    "s = shift_coord(*r, rng, std=0.01)\n",
     "\n",
     "c1.load_s(s)\n",
     "c1.load_r(r)\n",
+    "t=1e-3\n",
     "\n",
     "print(\"SHAKE:\")\n",
     "shake_hist = [g for g in c1.itershake()]\n",
@@ -320,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "a4105850",
    "metadata": {},
    "outputs": [
@@ -329,29 +310,29 @@
      "output_type": "stream",
      "text": [
       "SHAKE:\n",
-      "[array([-98.89717076, -43.27859355]), array([328.40867399, 980.5644656 ]), array([ 46415.08155079, 564412.93373206]), array([1.52289523e+10, 1.90488361e+11]), array([1.73533137e+21, 2.17013880e+22]), array([2.25226386e+43, 2.81659936e+44]), array([3.79397448e+87, 4.74460659e+88]), array([1.07657594e+176, 1.34632674e+177]), array([inf, inf])]\n",
+      "[array([0.35478987, 0.01658457]), array([0.36162345, 0.01781299]), array([0.36188488, 0.01786376]), array([0.36189497, 0.01786575])]\n",
       "\n",
       "ILVES-M:\n",
-      "[array([0., 0.]), array([-98.89717076, -43.27859355]), array([-55.16376585, -22.0908088 ]), array([-41.03412645, -12.29504408]), array([-38.98824037,  -8.49067825]), array([-38.85580245,  -7.60153476]), array([-38.84888009,  -7.54526815]), array([-38.84885209,  -7.54504056])]\n",
+      "[array([0., 0.]), array([0.35478987, 0.01658457]), array([0.36189254, 0.01786477]), array([0.36189537, 0.01786583])]\n",
       "\n",
       "ILVES-F:\n",
-      "[array([0., 0.]), array([-139.57313512,  -42.71548039]), array([1065.54464584,  902.96567434]), array([116795.61137623, 414970.43566564]), array([1.52931252e+10, 9.19310544e+10]), array([7.47365865e+20, 4.54935005e+21]), array([1.83038482e+42, 1.11426950e+43]), array([1.09805575e+85, 6.68455349e+85]), array([3.95174318e+170, 2.40567373e+171]), array([inf, inf])]\n",
+      "[array([0., 0.]), array([0.36886196, 0.01772755]), array([0.3619105 , 0.01788749]), array([0.36189521, 0.01786617])]\n",
       "\n",
       "Quartic / QDS:\n",
-      "0.9947512558318731\n",
-      "quartic of X_plus 0.9973721751843055 is 9.800716692653921e-07\n",
-      "quartic of X_minus -0.9973721751843055 is 0.0015369171699397555\n",
-      "Initial guess X0: -0.9970230301877151\n",
-      "Converged X: -0.9969920253560771\n",
-      "Quartic value at X: 0.0\n",
+      "0.031276512558318724\n",
+      "quartic of X_plus 0.17685166823730764 is 0.0006627907368924185\n",
+      "quartic of X_minus -0.17685166823730764 is 2.1082368352187686e-06\n",
+      "Initial guess X0: -0.17684678693504396\n",
+      "Converged X: -0.176846746194398\n",
+      "Quartic value at X: 7.632783294297951e-17\n",
       "Root success flag: True\n",
-      "Function evaluations: 21 Jacobian evaluations: 1\n",
-      "[-37.13736833   6.36524182]\n",
+      "Function evaluations: 15 Jacobian evaluations: 1\n",
+      "[0.36189537 0.01786583]\n",
       "\n",
       "Iterations / cost to converge:\n",
-      "SHAKE      : 9 iterations\n",
-      "ILVES-M    : 7 iterations\n",
-      "ILVES-F    : 9 iterations\n",
+      "SHAKE      : 4 iterations\n",
+      "ILVES-M    : 3 iterations\n",
+      "ILVES-F    : 3 iterations\n",
       "QDS        : 1 (root solver; evals printed above)\n"
      ]
     }
@@ -364,7 +345,7 @@
     "rng = np.random.default_rng(seed=123456)\n",
     "\n",
     "# Particle order: 0=C (centre), 1=Cl, 2=H\n",
-    "c1 = Constraints(masses=[12.0, 35.45, 1.0])\n",
+    "c1 = Constraints(masses=[12.0, 35.45, 1.0], conlens=np.array([0.177,0.109]))\n",
     "\n",
     "R_CCl = 0.177      # nm\n",
     "R_CH  = 0.109      # nm\n",
@@ -378,10 +359,11 @@
     "    [R_CH*np.cos(theta), R_CH*np.sin(theta), 0.0]    # H\n",
     "], dtype=float)\n",
     "\n",
-    "s = shift_coord(*r, rng)\n",
+    "s = shift_coord(*r, rng, std=0.01)\n",
     "\n",
     "c1.load_s(s)\n",
     "c1.load_r(r)\n",
+    "t=1e-3\n",
     "\n",
     "print(\"SHAKE:\")\n",
     "shake_hist = [g for g in c1.itershake()]\n",
@@ -499,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "f4264014",
    "metadata": {},
    "outputs": [
@@ -507,13 +489,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tol, SHAKE, ILVES-M, ILVES-F, QDS\n",
-      "1e-03, 1, 1, 1, 1\n",
-      "1e-06, 3, 2, 2, 1\n",
-      "1e-09, 5, 3, 4, 1\n",
+      "tol, SHAKE (ave, std), ILVES-M (ave, std), ILVES-F (ave, std), QDS\n",
+      "1e-03,\n",
+      "           2.0000,   0.4472,\n",
+      "           1.8000,   0.4000,\n",
+      "           2.0000,   0.0000, 1\n",
+      "1e-06,\n",
+      "           4.6000,   1.4967,\n",
+      "           2.8000,   0.4000,\n",
+      "           2.9000,   0.7000, 1\n",
+      "1e-09,\n",
+      "           6.8000,   1.4697,\n",
+      "           3.0000,   0.0000,\n",
+      "           4.3000,   0.4583, 1\n",
       "\n",
       "QDS cost (single solve):\n",
-      "Function evaluations: 14  Jacobian evaluations: 1\n"
+      "Function evaluations: mean 12.1 std 2.071231517720798\n",
+      "Jacobian evaluations: mean 1.0 std 0.0\n"
      ]
     }
    ],
@@ -648,10 +640,10 @@
     "\n",
     "print(\"tol, SHAKE (ave, std), ILVES-M (ave, std), ILVES-F (ave, std), QDS\")\n",
     "for row in results:\n",
-    "    print(f\"{row['tol']:.0e},\n",
+    "    print(f\"\"\"{row['tol']:.0e},\n",
     "         {row['SHAKEave']:8.4f}, {row['SHAKEstd']:8.4f},\n",
     "         {row['ILVES-Mave']:8.4f}, {row['ILVES-Mstd']:8.4f},\n",
-    "         {row['ILVES-Fstd']:8.4f}, {row['ILVES-Fave']:8.4f}, 1\")\n",
+    "         {row['ILVES-Fave']:8.4f}, {row['ILVES-Fstd']:8.4f}, 1\"\"\")\n",
     "\n",
     "print(\"\\nQDS cost (single solve):\")\n",
     "if qds_fevals is not None and qds_jevals is not None:\n",
